Fix deployment issues
To support PDF rendering in CI, a missing dependency was added to the
GitHub Actions workflow and the HTML-specific content (<link rel="shortcut icon")
was restricted to the HTML output. There is no further need to check
the _site directory into version control.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,6 @@
 project:
   type: book
-  output-dir: _book
+  output-dir: _site
   preview:
     port: 4200
     browser: false
@@ -11,7 +11,7 @@ project:
 book:
   title: "A Hitchhiker's Guide to Quantitative Finance"
   author: "Michael Gauci"
-  date: "10/12/2024"
+  date: "2/02/2026"
   # issue-url: https://github.com/micmalti/quant-book/issues/new
   repo-url: https://github.com/micmalti/quant-book/
   repo-branch: master
@@ -41,15 +41,14 @@ website:
         target: _blank
   # bread-crumbs: true
 
-include-in-header:
-  - text: |
-      <link rel = "shortcut icon" href = "favicon.svg" />
-
 bibliography: references.bib
 csl: journal-of-finance.csl
 
 format:
   html:
+    include-in-header:
+      - text: |
+          <link rel = "shortcut icon" href = "favicon.svg" />
     theme:
       - simplex   # spacelab flatly united zephyr cosmo
       - styles.scss
