--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,9 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
-
+        with:
+          tinytex: true
+          
       - name: Install Python and Dependencies
         uses: actions/setup-python@v4
         with:
